[package]
name = "devprofiler"
version = "0.2.3"
edition = "2021"
authors = ["Tapish Rathore <tapish@vibinex.com>"]
license = "GPL-3.0-or-later"
serde_json = "1.0"
flate2 = "1.0"
sha2 = "0.10"
base64ct = "1.5.3"
sha256 = "1.1.1"
walkdir = "2"
inquire = "0.5.2"
pkg-config = "0.3.26"
reqwest = { version = "0.11", features = ["blocking", "json"] }
# dummy rewrite

# todo - check all lib licences
